--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,52 +2,9 @@
   box-sizing: border-box;
 }
 
-header {
-  position: relative;
-}
-
-#navigation {
-  position: fixed;
-  height: 60px;
-  top: 0;
-  background-color: gray;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  z-index: 10;
-}
-
-#navigation li {
-  list-style: none;
-  margin: auto 80px;
-}
-
-#navigation li a {
-  font-size: 20px;
-  padding: 20px;
-  text-decoration: none;
-}
-
-#navigation li ul {
-  display: none;
-  position: absolute;
-}
-
-#navigation li:hover > ul {
-  display: block;
-}
-
-#navigation li ul li {
-  margin: 0 auto;
-  padding: 20px;
-  list-style-type: none;
-}
-
 h1 {
   margin: 80px;
   text-align: center;
-  color: brown;
-  border: darkblue solid 4px;
 }
 
 h2 {
@@ -90,3 +47,11 @@ iframe {
   margin-left: 15px;
   list-style: none;
 }
+
+.container {
+  background-color: white;
+  padding-bottom: 70px;
+}
+
+
+
