--- a/stylesheet.css
+++ b/stylesheet.css
@@ -50,9 +50,53 @@ iframe {
   list-style: none;
 }
 
+.twitter-timeline {
+  margin-left: 270px;
+}
+
 .container {
-  background-color: white;
   padding-bottom: 70px;
+}
+
+
+.btn {
+  width: 200px;
+  height: 60px;
+  background: none;
+  border: solid 4px;
+  font-weight: 700;
+  text-transform: uppercase;
+  cursor: pointer;
+  font-size: 16px;
+  position: relative;
+}
+
+.btn::before, .btn::after{
+  content: "";
+  position: absolute;
+  width: 14px;
+  height: 4px;
+  background-color: red;
+  transform: skewX(50deg);
+  transition: .4s linear;
+}
+
+.btn::before {
+  top: -4px;
+  left: 10%;
+}
+
+.btn::after {
+  bottom: -4px;
+  right: 10%;
+}
+
+.btn:hover::before {
+  left: 80%;
+}
+
+.btn:hover::after {
+  right: 80%;
 }
 
 
